--- a/esimerkit-WP8/Lumiukko/Lumiukko.csproj
+++ b/esimerkit-WP8/Lumiukko/Lumiukko.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">ARM</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BA031D2F-ADF5-407F-9783-9C4FDDFACD51}</ProjectGuid>
+    <ProjectGuid>{08B66F18-E74B-40F6-B3DE-8536A0559405}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -129,15 +129,18 @@
   </ItemGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Reference Include="Jypeli">
-      <HintPath>..\..\Jypeli\wp8\bin\WindowsPhone\ARM\Debug\Jypeli.dll</HintPath>
-    </Reference>
     <Reference Include="MonoGame.Framework" Condition=" '$(Platform)' == 'ARM' ">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsPhone\ARM\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="MonoGame.Framework" Condition=" '$(Platform)' == 'x86' ">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsPhone\x86\MonoGame.Framework.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Jypeli\Jypeli-WP8.csproj">
+      <Project>{86788B50-91AD-480E-8A06-E9C94FD1F07A}</Project>
+      <Name>Jypeli-WP8</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
