Graphics code to draw on the canvas and move the camera around

--- a/branches/MonoGame/esimerkit-VS2012/Lumiukko/Lumiukko/Lumiukko.csproj
+++ b/branches/MonoGame/esimerkit-VS2012/Lumiukko/Lumiukko/Lumiukko.csproj
@@ -40,9 +40,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Jypeli">
-      <HintPath>..\..\..\Jypeli\bin\WindowsGL\Debug\Jypeli.dll</HintPath>
-    </Reference>
     <Reference Include="OpenTK">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\OpenTK.dll</HintPath>
     </Reference>
@@ -67,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Jypeli\Jypeli-VS2012.csproj">
+      <Project>{76cc55a2-bece-4f80-b491-ddcab9f061fb}</Project>
+      <Name>Jypeli-VS2012</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
