--- a/branches/MonoGame/esimerkit-Xamarin/Lumiukko/Lumiukko.csproj
+++ b/branches/MonoGame/esimerkit-Xamarin/Lumiukko/Lumiukko.csproj
@@ -37,9 +37,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="MonoGame.Framework" />
-    <Reference Include="Jypeli">
-      <HintPath>..\..\Jypeli\bin\Xamarin-Debug\Jypeli.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,4 +50,10 @@
     <Folder Include="Content\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Jypeli\Jypeli-Xamarin.csproj">
+      <Project>{B953E24C-29F5-4DA6-AE07-8F4300EAD977}</Project>
+      <Name>Jypeli-Xamarin</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
