--- a/Jypeli/Jypeli-Win8.csproj
+++ b/Jypeli/Jypeli-Win8.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controls\Keyboard\Keyboard.cs" />
     <Compile Include="Controls\Mouse\Mouse.cs" />
     <Compile Include="Controls\Mouse\MouseButton.cs" />
+    <Compile Include="Controls\Mouse\MouseState.cs" />
     <Compile Include="Controls\TouchPanel\Touch.cs" />
     <Compile Include="Controls\TouchPanel\TouchListener.cs" />
     <Compile Include="Controls\TouchPanel\TouchPanel.cs" />
@@ -180,13 +181,17 @@
     <Compile Include="AdvanceMath\Geometry2D\Ray.cs" />
     <Compile Include="AdvanceMath\IO\MathReader.cs" />
     <Compile Include="AdvanceMath\IO\MathWriter.cs" />
+    <Compile Include="Game\Controls.cs" />
+    <Compile Include="Game\DelayedActions.cs" />
     <Compile Include="Game\Game.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Game\Graphics.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\Canvas.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\Graphics.cs" />
+    <Compile Include="Graphics\Image.cs" />
     <Compile Include="Graphics\ImageBatch.cs" />
     <Compile Include="Graphics\LineBatch.cs" />
     <Compile Include="Graphics\ShapeBatch.cs" />
