--- a/Jypeli/Jypeli-Xamarin.csproj
+++ b/Jypeli/Jypeli-Xamarin.csproj
@@ -40,6 +40,17 @@
     <Reference Include="MonoGame.Framework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Controller\ButtonState.cs" />
+    <Compile Include="Controls\Controller\Controller.cs" />
+    <Compile Include="Controls\Controller\Listener.cs" />
+    <Compile Include="Controls\Keyboard\Key.cs" />
+    <Compile Include="Controls\Keyboard\Keyboard.cs" />
+    <Compile Include="Controls\Mouse\Mouse.cs" />
+    <Compile Include="Controls\Mouse\MouseButton.cs" />
+    <Compile Include="Controls\Mouse\MouseState.cs" />
+    <Compile Include="Controls\TouchPanel\Touch.cs" />
+    <Compile Include="Controls\TouchPanel\TouchListener.cs" />
+    <Compile Include="Controls\TouchPanel\TouchPanel.cs" />
     <Compile Include="DataTypes\Angle.cs" />
     <Compile Include="DataTypes\BoundingRectangle.cs" />
     <Compile Include="DataTypes\Direction.cs" />
@@ -84,17 +95,22 @@
     <Compile Include="AdvanceMath\Geometry2D\Ray.cs" />
     <Compile Include="AdvanceMath\IO\MathReader.cs" />
     <Compile Include="AdvanceMath\IO\MathWriter.cs" />
+    <Compile Include="Game\Controls.cs" />
+    <Compile Include="Game\DelayedActions.cs" />
     <Compile Include="Game\Game.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Game\Graphics.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\Canvas.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\Graphics.cs" />
+    <Compile Include="Graphics\Image.cs" />
     <Compile Include="Graphics\ImageBatch.cs" />
     <Compile Include="Graphics\LineBatch.cs" />
     <Compile Include="Graphics\ShapeBatch.cs" />
     <Compile Include="Graphics\View.cs" />
+    <Compile Include="Helpers\RandomGen.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Storage\SaveAttribute.cs" />
     <Compile Include="DataTypes\Destroyable.cs" />
