Image loading and drawing on canvas, license texts

--- a/branches/MonoGame/esimerkit-VS2010/Lumiukko/Lumiukko/Lumiukko.csproj
+++ b/branches/MonoGame/esimerkit-VS2010/Lumiukko/Lumiukko/Lumiukko.csproj
@@ -35,7 +35,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="Peli.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,10 +60,17 @@
       <Link>SDL.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\norsu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Content\" />
+    <ProjectReference Include="..\..\..\Jypeli\Jypeli-VS2010.csproj">
+      <Project>{5FE042B2-05F4-47A9-BC92-2E6E1C5356E9}</Project>
+      <Name>Jypeli-VS2010</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
