--- a/branches/MonoGame/esimerkit-Xamarin/Lumiukko/Lumiukko.csproj
+++ b/branches/MonoGame/esimerkit-Xamarin/Lumiukko/Lumiukko.csproj
@@ -56,4 +56,9 @@
       <Name>Jypeli-Xamarin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\norsu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
