--- a/esimerkit-VS2012/Lumiukko/Lumiukko/Lumiukko.csproj
+++ b/esimerkit-VS2012/Lumiukko/Lumiukko/Lumiukko.csproj
@@ -60,11 +60,12 @@
       <Link>SDL.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\norsu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\..\Jypeli\Jypeli-VS2012.csproj">
       <Project>{76cc55a2-bece-4f80-b491-ddcab9f061fb}</Project>
